--- a/main.css
+++ b/main.css
@@ -52,14 +52,18 @@ body p {
     text-align: center;
 }
 
-form {
-    width: 50%;
-    margin-top: 5%;
-    margin-left: 25%;
+.form-group {
+    width: 75%;
+    margin-top: 2%;
+    margin-left: 12.5%;
+}
+
+.main-btn {
+    margin-left: 15%;
 }
 
 .member-link {
-	text-align: center;
+    text-align: center;
 }
 
 .mommy-hide {
@@ -91,6 +95,10 @@ form {
     height: 1000px;
 }
 
+.profile-header {
+    text-align: center;
+}
+
 .profile-input {
     margin-top: 25%;
 }
@@ -105,7 +113,7 @@ form {
 }
 
 .profile-section {
-	margin-left: 10%;
+    margin-left: 10%;
 }
 
 
@@ -123,33 +131,54 @@ form {
 }
 
 .ask-heading {
-	text-align: center;
-	padding-top: 10%;
-	font-style: italic;
+    text-align: center;
+    padding-top: 10%;
+    font-style: italic;
 }
 
 .ask {
-	text-align: center;
-	width: 75%;
-	margin-left: 12.5%;
-	font-size: 1.5em;
+    text-align: center;
+    width: 75%;
+    margin-left: 12.5%;
+    font-size: 1.5em;
 }
 
 .accordion-main {
-	padding-top: 3%;
-	width: 95%;
-	margin-left: 2.5%;
+    padding-top: 3%;
+    width: 95%;
+    margin-left: 2.5%;
 }
 
 .ask-btn {
-	margin: 0 auto;
-	display: block;
-	background-color: #lightgrey;
+    margin: 0 auto;
+    display: block;
+    background-color: #lightgrey;
 }
 
 .reply-btn {
-	margin-left: 5%;
-	margin-bottom: 2%;
+    margin-left: 5%;
+    margin-bottom: 2%;
+}
+
+
+/*********************************************************
+
+
+				Around Me Page
+
+
+*********************************************************/
+
+.map-location {
+    text-align: center;
+    width: 80%;
+    margin: 10% 0 0 10%;
+}
+
+#map {
+    width: 100%;
+    height: 400px;
+    background-color: grey;
 }
 
 
@@ -173,5 +202,8 @@ form {
     }
     .mommy-hide {
         display: block;
+    }
+    .profile-input {
+        margin-top: 20%;
     }
 }
