Added functionality of app to display user questions on page

--- a/main.css
+++ b/main.css
@@ -130,6 +130,10 @@ body p {
     height: 1000px;
 }
 
+#new-posts {
+    height: 20px;
+}
+
 .ask-heading {
     text-align: center;
     padding-top: 10%;
