Created headline for users question and added p tag for users question, also added new modal window for users reply to questions that has username and answer

--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ body p {
 /*********************************************************
 
 
-				MAIN PAGE
+                MAIN PAGE
 
 
 *********************************************************/
@@ -85,7 +85,7 @@ body p {
 /*********************************************************
 
 
-				PROFILE PAGE
+                PROFILE PAGE
 
 
 *********************************************************/
@@ -120,7 +120,7 @@ body p {
 /*********************************************************
 
 
-				ASK A MOMMA PAGE
+                ASK A MOMMA PAGE
 
 
 *********************************************************/
@@ -132,6 +132,12 @@ body p {
 
 #new-posts {
     height: 20px;
+    width: 90%;
+    margin-left: 5%;
+}
+
+hr {
+    width: 90%;
 }
 
 .ask-heading {
@@ -168,7 +174,7 @@ body p {
 /*********************************************************
 
 
-				Around Me Page
+                Around Me Page
 
 
 *********************************************************/
@@ -189,7 +195,7 @@ body p {
 /*********************************************************
 
 
-				Responsiveness
+                Responsiveness
 
 
 *********************************************************/
